--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,8 @@
 name: Bug report
 description: Use this template for reporting bugs.
 title: "[BUG] "
-labels: ["bug", "needs-triage"]
-assignees: ""
+labels: ["💥 Bug"]
+assignees: ["330sum", "lkdcode"]
 body:
   - type: markdown
     attributes:
