--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,8 @@
-name: Bug Report Template1
+name: Bug Report Template
 description: 버그를 리포트 템플릿입니다.
 title: "[BUG] "
 labels: ["💥 Bug"]
-assignees: ["330sum", "lkdcode"]
+assignees: ""
 body:
   - type: markdown
     attributes:
