Docs(.yml): add issues template

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -21,23 +21,23 @@ body:
   - type: textarea
     id: text2
     attributes:
-      label: 🧾 체크 리스크
+      label: 📋 체크 리스크
       description: 구현할 기능에 대한 계획을 작성해 주세요.
       placeholder: 최대 5단계까지 가능합니다. 마일스톤을 잘 생각해 주세요.
       value: |
-        - [ ] check 1
-        - [ ] check 2
-        - [ ] check 3
-        - [ ] check 4
-        - [ ] check 5
+        > - [ ] 🎯
+        > - [ ] 🎯
+        > - [ ] 🎯
+        > - [ ] 🎯
+        > - [ ] 🎯
     validations:
       required: true
 
   - type: markdown
     attributes:
       value: |
-        ### 체크리스트
-        아래의 체크리스트를 확인해 주세요:
+        ### Feature 이슈 발행 체크리스트
+        아래의 체크리스트를 확인해 주세요!
 
         - [x] 유사한 기능이 이미 존재하는지 확인했나요?
         - [x] 이 기능이 현재의 문제를 해결하는 데 도움이 되나요?
