--- a/.github/ISSUE_TEMPLATE/review_template.yml
+++ b/.github/ISSUE_TEMPLATE/review_template.yml
@@ -1,59 +1,32 @@
-name: 코드 리뷰
-description: 코드 리뷰를 작성할 때 이 템플릿을 사용하세요.
-title: "[REVIEW] "
+name: 통합 리뷰
+description: 리뷰를 작성할 때 이 템플릿을 사용하세요.
+title: "[Review] "
 labels: ["🚩 Review"]
 assignees: ["330sum", "lkdcode"]
 body:
-  - type: input
-    id: review_title
-    attributes:
-      label: 리뷰 제목
-      description: 코드 리뷰의 제목을 작성하세요.
-      placeholder: 리뷰 제목
-    validations:
-      required: true
-
   - type: textarea
-    id: review_description
+    id: text1
     attributes:
-      label: 리뷰 설명
-      description: 코드 리뷰에 대한 간략한 설명을 작성하세요.
+      label: ⭐️ 리뷰 설명
+      description: 어떤 리뷰인지 자세히 설명해 주세요.
       placeholder: 리뷰 설명
     validations:
       required: true
 
   - type: textarea
-    id: code_changes
+    id: text2
     attributes:
-      label: 코드 변경 사항
-      description: 리뷰할 코드의 변경 사항을 설명하세요.
-      placeholder: 코드 변경 사항
+      label: 🔺 개선 사항
+      description: 어떤 부분을 개선해야 하는지 목표를 설정해 주세요.
+      placeholder: 개선 사항
     validations:
       required: true
 
   - type: textarea
-    id: positive_feedback
+    id: text3
     attributes:
-      label: 긍정적인 피드백
-      description: 코드의 긍정적인 부분을 작성하세요.
-      placeholder: 긍정적인 피드백
+      label: 📈 코드 리뷰
+      description: 리뷰할 코드를 설명하세요.
+      placeholder: 코드 리뷰
     validations:
       required: true
-
-  - type: textarea
-    id: improvement_suggestions
-    attributes:
-      label: 개선 제안
-      description: 코드의 개선이 필요한 부분과 제안을 작성하세요.
-      placeholder: 개선 제안
-    validations:
-      required: true
-
-  - type: textarea
-    id: additional_comments
-    attributes:
-      label: 추가 코멘트
-      description: 코드 리뷰와 관련된 추가 코멘트를 작성하세요.
-      placeholder: 추가 코멘트
-    validations:
-      required: false
