--- a/.github/ISSUE_TEMPLATE/review_template.yml
+++ b/.github/ISSUE_TEMPLATE/review_template.yml
@@ -1,8 +1,7 @@
-name: 통합 리뷰
+name: Review Template
 description: 리뷰를 작성할 때 이 템플릿을 사용하세요.
 title: "[Review] "
 labels: ["🚩 Review"]
-assignees: ["330sum", "lkdcode"]
 body:
   - type: textarea
     id: text1
