Docs(.yml): add issue template

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: Feature Template
+name: ✨ Feature Template
 description: 새로운 기능을 요청할 때 이 템플릿을 사용하세요.
 title: "[Feature] "
 labels: ["✨ Feature"]
